--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 362,
    "metadata": {
     "collapsed": true
    },
@@ -66,7 +66,8 @@
     "\n",
     "def save_fig(fig_id, tight_layout=True, fig_extension=\"png\", resolution=300):\n",
     "    if not os.path.exists(IMAGES_PATH):\n",
-    "        os.makedirs(IMAGES)\n",
+    "        os.makedirs(IMAGES_PATH)\n",
+    "\n",
     "    path = os.path.join(IMAGES_PATH, fig_id + \".\" + fig_extension)\n",
     "    print(\"Saving figure\", fig_id)\n",
     "    if tight_layout:\n",
