Added the categorical encoder

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -3293,221 +3293,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Prepare the data for Machine Learning algorithms"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "housing = strat_train_set.drop(\"median_house_value\", axis=1) # drop labels for training set\n",
-    "housing_labels = strat_train_set[\"median_house_value\"].copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "sample_incomplete_rows = housing[housing.isnull().any(axis=1)].head()\n",
-    "sample_incomplete_rows"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "sample_incomplete_rows.dropna(subset=[\"total_bedrooms\"])    # option 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "sample_incomplete_rows.drop(\"total_bedrooms\", axis=1)       # option 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "median = housing[\"total_bedrooms\"].median()\n",
-    "sample_incomplete_rows[\"total_bedrooms\"].fillna(median, inplace=True) # option 3\n",
-    "sample_incomplete_rows"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import Imputer\n",
-    "\n",
-    "imputer = Imputer(strategy=\"median\")"
+    "## Preprocess the Categorical Features"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remove the text attribute because median can only be calculated on numerical attributes:"
+    "Let's preprocess the categorical input feature, `Sex`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "housing_num = housing.drop('ocean_proximity', axis=1)\n",
-    "# alternatively: housing_num = housing.select_dtypes(include=[np.number])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "imputer.fit(housing_num)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "imputer.statistics_"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   "execution_count": 393,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    Female\n",
+       "1      Male\n",
+       "2      Male\n",
+       "3    Female\n",
+       "4    Female\n",
+       "5    Female\n",
+       "6      Male\n",
+       "7      Male\n",
+       "8    Female\n",
+       "9      Male\n",
+       "Name: Sex, dtype: object"
+      ]
+     },
+     "execution_count": 393,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Check that this is the same as manually computing the median of each attribute:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "housing_num.median().values"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Transform the training set:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "X = imputer.transform(housing_num)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "housing_tr = pd.DataFrame(X, columns=housing_num.columns,\n",
-    "                          index = list(housing.index.values))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "housing_tr.loc[sample_incomplete_rows.index.values]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "imputer.strategy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "housing_tr = pd.DataFrame(X, columns=housing_num.columns)\n",
-    "housing_tr.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now let's preprocess the categorical input feature, `ocean_proximity`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "housing_cat = housing['ocean_proximity']\n",
-    "housing_cat.head(10)"
+    "data['Sex'].head(10)"
    ]
   },
   {
@@ -3519,32 +3342,256 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 394,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 1, 0, 0, 0, 1, 1, 0, 1])"
+      ]
+     },
+     "execution_count": 394,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "housing_cat_encoded, housing_categories = housing_cat.factorize()\n",
-    "housing_cat_encoded[:10]"
+    "sex_categories_encoded, sex_categories = data['Sex'].factorize()\n",
+    "sex_categories_encoded[:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 392,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Female', 'Male'], dtype='object')"
+      ]
+     },
+     "execution_count": 392,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "housing_categories"
+    "sex_categories"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Warning**: earlier versions of the book used the `LabelEncoder` class instead of Pandas' `factorize()` method. This was incorrect: indeed, as its name suggests, the `LabelEncoder` class was designed for labels, not for input features. The code worked because we were handling a single categorical input feature, but it would break if you passed multiple categorical input features."
+    "Let's preprocess the categorical input feature, `Race`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 395,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 1, 0, 0])"
+      ]
+     },
+     "execution_count": 395,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "race_categories_encoded, race_categories = data['Race'].factorize()\n",
+    "race_categories_encoded[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 396,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['White', 'Hispanic, White', 'Unknown', 'Black', 'Asian, Other', 'Other',\n",
+       "       'Hispanic, Black', 'Native American, Other', 'Asian Indian', 'Chinese',\n",
+       "       'Hawaiian'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 396,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "race_categories"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's preprocess the categorical input feature, `MannerofDeath`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 397,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 1, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 397,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MannerofDeath_categories_encoded, MannerofDeath_categories = data['MannerofDeath'].factorize()\n",
+    "MannerofDeath_categories_encoded[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 398,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Accident', 'Pending', 'accident', 'Natural', 'ACCIDENT'], dtype='object')"
+      ]
+     },
+     "execution_count": 398,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MannerofDeath_categories"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's preprocess the categorical input feature, `Location`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 399,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 0, 0, 2, 1, 1, 0, 1, 0])"
+      ]
+     },
+     "execution_count": 399,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "death_location_categories_encoded, death_location_categories = data['Location'].factorize()\n",
+    "death_location_categories_encoded[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 400,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Residence', 'Hospital', 'Other', 'Convalescent Home', 'Hospice'], dtype='object')"
+      ]
+     },
+     "execution_count": 400,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "death_location_categories"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's preprocess the categorical input feature, `InjuryPlace`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 401,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1,  0,  0,  0,  1,  0, -1,  0,  0,  0])"
+      ]
+     },
+     "execution_count": 401,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "injury_location_categories_encoded, injury_location_categories = data['InjuryPlace'].factorize()\n",
+    "injury_location_categories_encoded[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 402,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Residence', 'Residential Building', 'Other', 'Restaurant',\n",
+       "       'Automobile', 'Hospital', 'Unknown', 'Hotel or Motel',\n",
+       "       'Other indoor Area', 'Other, Industrial Area', 'Other (unknown)',\n",
+       "       'Other, Other Outdoor Area', 'Other, Public Buildings', 'In Vehicle',\n",
+       "       'Store or Shopping Area', 'Other, Residential Institution', 'Alleyway',\n",
+       "       'Office Building', 'Driveway', 'Hospital or Emergency Room',\n",
+       "       'Apartment', 'Parking Lot', 'Public Park, Urban or Suburban', 'Casino',\n",
+       "       'School, Primary or Secondary', 'Bar or Night Club', 'Campgrounds',\n",
+       "       'Boat/Marina', 'Forest, Wooded Area', 'Sidewalk', 'Porch', 'Field',\n",
+       "       'House', 'Street', 'Roadway', 'Halfway House',\n",
+       "       'Train or Subway Station', 'Public Park', 'Beach',\n",
+       "       'Other, Park or Recreational Area', 'Nursing Home',\n",
+       "       'Detoxification Center', 'Rest Home', 'Rehab House', 'Garage',\n",
+       "       'Building', 'Friend's Residence', 'homeless shelter', 'Backyard',\n",
+       "       'University or College', 'Railroad Track', 'Church',\n",
+       "       'Multiple Locations', 'Other, Farm or Ranch', 'Convenience Store',\n",
+       "       'Warehouse', 'car in hartford', 'Apartment House', 'Cemetery', 'Yard',\n",
+       "       'residence', 'Shed', 'Gas Station'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 402,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "injury_location_categories"
    ]
   },
   {
@@ -3556,54 +3603,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import OneHotEncoder\n",
-    "\n",
-    "encoder = OneHotEncoder()\n",
-    "housing_cat_1hot = encoder.fit_transform(housing_cat_encoded.reshape(-1,1))\n",
-    "housing_cat_1hot"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The `OneHotEncoder` returns a sparse array by default, but we can convert it to a dense array if needed:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "housing_cat_1hot.toarray()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Warning**: earlier versions of the book used the `LabelBinarizer` class at this point. Again, this was incorrect: just like the `LabelEncoder` class, the `LabelBinarizer` class was designed to preprocess labels, not input features. A better solution is to use Scikit-Learn's upcoming `CategoricalEncoder` class: it will soon be added to Scikit-Learn, and in the meantime you can use the code below (copied from [Pull Request #9151](https://github.com/scikit-learn/scikit-learn/pull/9151))."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 407,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Definition of the CategoricalEncoder class, copied from PR #9151.\n",
-    "# Just run this cell, or copy it to your code, do not try to understand it (yet).\n",
     "\n",
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
     "from sklearn.utils import check_array\n",
@@ -3799,18 +3805,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 411,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<2x2 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 2 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 411,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#from sklearn.preprocessing import CategoricalEncoder # in future versions of Scikit-Learn\n",
-    "\n",
     "cat_encoder = CategoricalEncoder()\n",
-    "housing_cat_reshaped = housing_cat.values.reshape(-1, 1)\n",
-    "housing_cat_1hot = cat_encoder.fit_transform(housing_cat_reshaped)\n",
-    "housing_cat_1hot"
+    "sex_categories_reshaped = sex_categories.values.reshape(-1, 1)\n",
+    "sex_categories_1hot = cat_encoder.fit_transform(sex_categories_reshaped)\n",
+    "sex_categories_1hot"
    ]
   },
   {
@@ -3822,42 +3836,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 412,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.,  0.],\n",
+       "       [ 0.,  1.]])"
+      ]
+     },
+     "execution_count": 412,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "housing_cat_1hot.toarray()"
+    "sex_categories_1hot.toarray()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alternatively, you can specify the encoding to be `\"onehot-dense\"` to get a dense matrix rather than a sparse matrix:"
+    "Alternatively, we can specify the encoding to be `\"onehot-dense\"` to get a dense matrix rather than a sparse matrix:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 413,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.,  0.],\n",
+       "       [ 0.,  1.]])"
+      ]
+     },
+     "execution_count": 413,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cat_encoder = CategoricalEncoder(encoding=\"onehot-dense\")\n",
-    "housing_cat_1hot = cat_encoder.fit_transform(housing_cat_reshaped)\n",
-    "housing_cat_1hot"
+    "sex_categories_1hot = cat_encoder.fit_transform(sex_categories_reshaped)\n",
+    "sex_categories_1hot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 414,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array(['Female', 'Male'], dtype=object)]"
+      ]
+     },
+     "execution_count": 414,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cat_encoder.categories_"
    ]
@@ -5114,13 +5157,6 @@
    "outputs": [],
    "source": [
     "housing.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Congratulations! You already know quite a lot about Machine Learning. :)"
    ]
   }
  ],
