Updated the index

--- a/index.ipynb
+++ b/index.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Thilanka's Machine Learning Notebooks\n",
+    "# Thilanka's Python Notebooks\n",
     "\n",
-    "*Welcome to Thilanka's Machine Learning Notebooks!*\n",
+    "*Welcome to Thilanka's Python Notebooks!*\n",
     "\n",
     "[Prerequisites](#Prerequisites) (see below)\n",
     "\n",
     "## Notebooks\n",
-    "[CS-493D (Introduction to Machine Learning) Final Project](final_project.ipynb)\n"
+    "[Opioid Data Project](final_project.ipynb)\n"
    ]
   },
   {
