added some comments

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -91,14 +91,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "# Everytime we run this notebook, we get the updated data from the following webpage. \n",
     "DOWNLOAD_URL = \"https://data.ct.gov/api/views/rybz-nyjw/rows.csv\"\n",
     "DATA_SET_FILE = \"Accidental_Drug_Related_Deaths__2012-June_2017.csv\"\n",
+    "\n",
     "\n",
     "def fetch_opioid_data():\n",
     "    s=requests.get(DOWNLOAD_URL).content\n",
@@ -844,7 +846,9 @@
   {
    "cell_type": "code",
    "execution_count": 339,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data['MannerofDeath'] = data['MannerofDeath'].apply( lambda x: manner_of_death_classification[x])"
@@ -1636,7 +1640,9 @@
   {
    "cell_type": "code",
    "execution_count": 364,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "compare_props = pd.DataFrame({\n",
@@ -2658,7 +2664,9 @@
   {
    "cell_type": "code",
    "execution_count": 371,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Remove the not useful columns with NaN values\n",
@@ -3583,7 +3591,9 @@
   {
    "cell_type": "code",
    "execution_count": 382,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.pipeline import Pipeline\n",
